--- a/ElectivaProfesionalII/ElectivaProfesionalII/ElectivaProfesionalII.vbproj
+++ b/ElectivaProfesionalII/ElectivaProfesionalII/ElectivaProfesionalII.vbproj
@@ -50,6 +50,9 @@
     <ApplicationIcon>logIn.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="adodb, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -75,10 +78,10 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Autenticacion.vb">
+    <Compile Include="Formularios\Autenticacion.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Autenticacion.Designer.vb">
+    <Compile Include="Formularios\Autenticacion.Designer.vb">
       <DependentUpon>Autenticacion.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
@@ -99,7 +102,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Autenticacion.resx">
+    <EmbeddedResource Include="Formularios\Autenticacion.resx">
       <DependentUpon>Autenticacion.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
