--- a/ElectivaProfesionalII/ElectivaProfesionalII/ElectivaProfesionalII.vbproj
+++ b/ElectivaProfesionalII/ElectivaProfesionalII/ElectivaProfesionalII.vbproj
@@ -78,11 +78,18 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conexion.vb" />
     <Compile Include="Formularios\Autenticacion.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Formularios\Autenticacion.Designer.vb">
       <DependentUpon>Autenticacion.vb</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Mensajes\ConexionDB.Designer.vb">
+      <DependentUpon>ConexionDB.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Mensajes\ConexionDB.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -104,6 +111,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Formularios\Autenticacion.resx">
       <DependentUpon>Autenticacion.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mensajes\ConexionDB.resx">
+      <DependentUpon>ConexionDB.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -127,6 +137,7 @@
   <ItemGroup>
     <Content Include="logIn.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
