--- a/ElectivaProfesionalII/ElectivaProfesionalII/App.config
+++ b/ElectivaProfesionalII/ElectivaProfesionalII/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ElectivaProfesionalII.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <applicationSettings>
+        <ElectivaProfesionalII.My.MySettings>
+            <setting name="cnADODB" serializeAs="String">
+                <value>Driver={SQL Server Native Client 11.0};Server=tcp:unitec.database.windows.net,1433;Database=ElectivaProfesionalII;Uid=Yeudiel@unitec;Pwd=Semeolvido+;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;</value>
+            </setting>
+        </ElectivaProfesionalII.My.MySettings>
+    </applicationSettings>
 </configuration>
