--- a/ElectivaProfesionalII/ElectivaProfesionalII/ElectivaProfesionalII.vbproj
+++ b/ElectivaProfesionalII/ElectivaProfesionalII/ElectivaProfesionalII.vbproj
@@ -49,6 +49,15 @@
   <PropertyGroup>
     <ApplicationIcon>logIn.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>3300086DDFA358BDCB267EADA568B74CB709E16D</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="adodb, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>True</EmbedInteropTypes>
@@ -86,6 +95,18 @@
       <DependentUpon>Autenticacion.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Formularios\IngresoInventario.Designer.vb">
+      <DependentUpon>IngresoInventario.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\IngresoInventario.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\SysControl.Designer.vb">
+      <DependentUpon>SysControl.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\SysControl.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Mensajes\ConexionDB.Designer.vb">
       <DependentUpon>ConexionDB.vb</DependentUpon>
     </Compile>
@@ -112,6 +133,12 @@
     <EmbeddedResource Include="Formularios\Autenticacion.resx">
       <DependentUpon>Autenticacion.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\IngresoInventario.resx">
+      <DependentUpon>IngresoInventario.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\SysControl.resx">
+      <DependentUpon>SysControl.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mensajes\ConexionDB.resx">
       <DependentUpon>ConexionDB.vb</DependentUpon>
     </EmbeddedResource>
@@ -132,7 +159,9 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="logIn.ico" />
