--- a/ElectivaProfesionalII/ElectivaProfesionalII/My Project/Settings.settings
+++ b/ElectivaProfesionalII/ElectivaProfesionalII/My Project/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" UseMySettingsClassName="true">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="My" GeneratedClassName="MySettings" UseMySettingsClassName="true">
+  <Profiles />
+  <Settings>
+    <Setting Name="cnADODB" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Driver={SQL Server Native Client 11.0};Server=tcp:unitec.database.windows.net,1433;Database=ElectivaProfesionalII;Uid=Yeudiel@unitec;Pwd=Semeolvido+;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
