--- a/ElectivaProfesionalII/ElectivaProfesionalII/ElectivaProfesionalII.vbproj
+++ b/ElectivaProfesionalII/ElectivaProfesionalII/ElectivaProfesionalII.vbproj
@@ -85,6 +85,12 @@
       <DependentUpon>Autenticacion.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Formularios\Principal.Designer.vb">
+      <DependentUpon>Principal.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Principal.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -104,6 +110,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Formularios\Autenticacion.resx">
       <DependentUpon>Autenticacion.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Principal.resx">
+      <DependentUpon>Principal.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
